Correctly use mapToSource when getting mime data from a Playlist proxy model.

This fixes the issues with the wrong track getting added to a stored playlist or dragged to an external app when sorting and/or filtering is active.
~lart Teo' for not fixing this _very_ obvious TODO
~lart nhn for not noticing and lart'ing Teo' sooner.

BUG: 226503